public interface IDoor {
    void lock();
    void unlock();
    void open();
    void close();
}
