public interface ISensing {
    void proximityCallback();
}
