public interface ITimed {
    void timeOutCallback();
}
